--- a/index..html
+++ b/index..html
@@ -11,7 +11,7 @@
     <div class="login">
         <form action="">
             <h3>Entrar</h3>
-            <input required id="email" type="text" nome="email" placeholder="Seuy e-mail"  />
+            <input required id="email" type="text" nome="email" placeholder="Seu e-mail"  />
             <input required id="password" type="password" nome="senha" placeholder="Sua senha" />
             <a href="/logado.html">ENVIAR</a>
             <p class="remember"><input type="checkbox" /> Lembre-se de mim</p>
