--- a/logado.html
+++ b/logado.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <h2 class="logo"> <i class="fas fa-spa"></i> Coach Flix</h2>
-            <h3 class="frase">Os Melhores Filmes de Coaching Para Assistir Hoje Mesmo, Uma Verdadeira Sessão de Coaching em Formato Filme</h3>
+            <h3 class="frase">Filmes Inspiradores, Uma Verdadeira Sessão de Coaching em Filme</h3>
             <nav>
                 <a href="">Inicio</a>
                 <a href="">Series</a>
